--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
     "@nuxtjs/i18n": "8.0.0-rc.5",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "nuxt": "^3.8.1",
     "typescript": "^5.2.2",
     "vite-plugin-vuetify": "^1.0.2",
