--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   "dependencies": {
     "@mdi/font": "^7.3.67",
     "@pinia/nuxt": "^0.5.1",
+    "@vee-validate/i18n": "^4.11.8",
+    "@vee-validate/nuxt": "^4.11.8",
+    "@vee-validate/rules": "^4.11.8",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
     "vee-validate": "^4.11.8",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^1.3.2"
   },
   "overrides": {
     "vue": "latest"
