--- a/package.json
+++ b/package.json
@@ -32,11 +32,9 @@
     "@vee-validate/i18n": "^4.11.8",
     "@vee-validate/nuxt": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
-    "@vee-validate/yup": "^4.11.8",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
     "vee-validate": "^4.11.8",
-    "vuex": "^4.1.0",
-    "yup": "^1.3.2"
+    "vuex": "^4.1.0"
   }
 }
