[main] added more fields

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@vee-validate/i18n": "^4.11.8",
     "@vee-validate/nuxt": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
+    "flag-icons": "^6.15.0",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
+    "v-phone-input": "^3.0.5",
     "vee-validate": "^4.11.8",
     "vuex": "^4.1.0"
   }
